# the-oracle

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: README.md  pyproject.toml
backend/notebooks/: langgraph.ipynb  test.ipynb
backend/src/the_oracle/: graph_predictor.py  langfuse_setup.py  llm.py  logger.py  main.py  prompts.py  types.py
backend/the_oracle/: hello.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  NodeLabel.tsx  constants.ts  events.ts  mock-res.json
src/: App.tsx  main.tsx
