[project]
name = "the-oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.9",
    "langchain-community>=0.3.8",
    "langchain-openai>=0.2.10",
    "fastapi[standard]>=0.115.5",
    "pydantic>=2.10.2",
    "langfuse>=2.55.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.56",
    "ipykernel>=6.29.5",
    "slowapi>=0.1.9",
]

[tool.ruff]
line-length = 120
